# thecrew

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: semanal.yml
knowledge/: editorial_guidelines.md  reali_ai_first_lens.md
src/thecrew/: crew.py  linkedin_auth.py  main.py  publish_linkedin.py
src/thecrew/config/: agents.yaml  tasks.yaml
src/thecrew/tools/: __init__.py  publishing_tools.py
